--- a/index.html
+++ b/index.html
@@ -5,21 +5,34 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Slot Machine </title>
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <script async defer src="./script.js"></script>
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <div class="machine">
-        <div class="slot" id="slot1">
-            <div class="value" id="value1">😃</div>
+    <div class="container machine">
+        <div class="row">
+            <div class="col slot" id="slot1">
+                <div class="value" id="value1">😃</div>
+            </div>
+            <div class="col slot" id="slot2">
+                <div class="value" id="value2">😉</div>
+            </div>
+            <div class="col slot" id="slot3">
+                <div class="value" id="value3">😭</div>
+            </div>
         </div>
-        <div class="slot" id="slot2">
-            <div class="value" id="value2">😉</div>
-        </div>
-        <div class="slot" id="slot3">
-            <div class="value" id="value3">😭</div>
+        <div class="row">
+            <div class="col">
+                <button type="button" id="spd-btn">Speed</button>
+                <input type="range" id="spd" name="spd" min="1" max="5"></input>
+                <button type="button" id="start-btn">Start</button>
+            </div>
         </div>
     </div>
     
 </body>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js" integrity="sha384-SR1sx49pcuLnqZUnnPwx6FCym0wLsk5JZuNx2bPPENzswTNFaQU1RDvt3wT4gWFG" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.min.js" integrity="sha384-j0CNLUeiqtyaRmlzUHCPZ+Gy5fQu0dQ6eZ/xAww941Ai1SxSY+0EQqNXNE6DZiVc" crossorigin="anonymous"></script>
 </html>
