done (por la noche)
casino slot machine, basic frontend project

(resolve set interval thing)

--- a/index.html
+++ b/index.html
@@ -11,16 +11,19 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+    <div class="container">
+        <h1 class="heading">SLOT MACHINE</h1>
+    </div>
     <div class="container machine">
         <div class="row">
             <div class="col slot" id="slot1">
-                <div class="value" id="value1">😃</div>
+                <div class="" id="value1">😃</div>
             </div>
             <div class="col slot" id="slot2">
-                <div class="value" id="value2">😉</div>
+                <div class="" id="value2">😉</div>
             </div>
             <div class="col slot" id="slot3">
-                <div class="value" id="value3">😭</div>
+                <div class="" id="value3">😭</div>
             </div>
         </div>
         <div class="row">
